--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="index.js" type="module" defer></script>
+    <script src="./index.js" type="module" defer></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <p>Your page will be styled here!</p>
-    <div>Quotes will display here</div>
-    <button>Click me to generate a random quote</button>
+    <div id="display">Quotes will display here</div>
+    <button id="button">Click me to generate a random quote</button>
 </body>
 </html>
