--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="./index.js" type="module" defer></script>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <p>Your page will be styled here!</p>
-    <div id="display">Quotes will display here</div>
-    <button id="button">Click me to generate a random quote</button>
-</body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="body">
+      <div class="box">
+        <div id="display">Quotes will display here</div>
+        <button id="button">Click me to generate a random quote</button>
+      </div>
+    </div>
+  </body>
 </html>
