feel inspired message

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
   </head>
   <body>
     <div class="body">
+      <h1>I hope you feel inspired.</h1>
       <div class="box">
         <div id="display">Quotes will display here</div>
-        <button id="button">Click me to generate a random quote</button>
+        <button id="button">Click me !!</button>
       </div>
     </div>
   </body>
